fam.css
/* ... */
.FAM-menu-option {
  font-size:30px;
  text-align:center;
  padding:4px;
  cursor:pointer;
}

.FAM-menu-option:hover {
  opacity:0.9;
  background:#EEE;
}

.FAM-menu-option:active {
  opacity:0.8;
  background:#DDD;
}

/* hide home button when no history */
#FAM-back[style*="none"] ~ #FAM-menu .FAM-menu-option:first-child { display:none; }

/* content */
#FAM-content {
  height:90%;
  height:calc(100% - 69px);
  overflow-y:auto;
  overflow-x:hidden;
}
#FAM-content.FAM-reply-open { height:calc(100% - 110px); }
#FAM-tab-container[style*="none"] + #FAM-content { height:calc(100% - 39px); }
#FAM-tab-container[style*="none"] + #FAM-content.FAM-reply-open { height:calc(100% - 80px); }

.FAM-content-block {
  font-size:14px;
  padding:12px;
}

.FAM-border-box {
  border:1px solid #DDD;
  border-radius:5px;
  padding:3px;
  margin:12px 6px;
}

.FAM-loading, .FAM-loading p {
  font-size:18px;
  font-weight:bold;
}

.FAM-loading {
  display:flex;
  justify-content:center;
  align-items:center;
  text-align:center;
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
}

.FAM-loading i {
  display:block;
  margin-bottom:12px;
}

#FAM-no-tabs { cursor:pointer; }

#FAM-idle {
  color:#FFF;
  background:rgba(0, 0, 0, 0.7);
  z-index:10;
  transition:300ms;
  cursor:pointer;
}
#FAM-idle:hover { background:rgba(0, 0, 0, 0.6); }

.FAM-button {
  color:#FFF;
  font-size:16px;
  font-weight:bold;
  text-transform:uppercase;
  background:#39F;
  border:none;
  border-radius:4px;
  display:block;
  height:40px;
  padding:0px 12px;
  margin:3px auto;
  cursor:pointer;
  outline:none;
}
.FAM-button:hover { background:#28E; }
.FAM-button:active { background:#17D; }

.FAM-inline-buttons .FAM-button {
  display:inline-block;
  margin:3px;
}

#FAM .FAM-inputbox {
  color:#333;
  font-size:14px;
  font-family:Arial, sans-serif;
  background:#FFF;
  border:1px solid #DDD;
  border-radius:4px;
  padding:8px;
  width:100%;
  vertical-align:baseline;
  cursor:text;
  outline:none;
}

#FAM select.FAM-inputbox, #FAM .FAM-inputbox[type="color"] {
  cursor:pointer;
}

#FAM textarea.FAM-inputbox {
  height:150px;
  resize:none;
}

#FAM .FAM-inputbox:hover { border-color:#CCC; }
#FAM .FAM-inputbox:focus { border-color:#39F; }

#FAM .FAM-button-input .FAM-inputbox {
  width:79%;
  width:calc(100% - 40px);
  height:40px;
  margin:0;
  border-radius:4px 0 0 4px;
}

#FAM .FAM-button-input .FAM-button {
  font-size:24px;
  vertical-align:-4px;
  width:40px;
  height:40px;
  display:inline-block;
  margin:0;
  padding:0;
  border-radius:0 4px 4px 0;
}

#FAM .FAM-button-input-small .FAM-inputbox {
  width:50px;
  height:30px;
  padding:0px 2px;
  vertical-align:top;
}

#FAM .FAM-button-input-small .FAM-button {
  font-size:18px;
  width:30px;
  height:30px;
  padding:0;
}

/* titles */
.FAM-title {
  font-size:24px;
  font-weight:bold;
  text-transform:uppercase;
  margin-bottom:12px;
}

.FAM-title a { text-decoration:none !important; }

.FAM-title i {
  font-size:36px;
  vertical-align:-2px;
  margin-right:3px;
}

.FAM-section-title {
  color:#39F;
  font-size:18px;
  font-weight:bold;
  border-bottom:2px solid #39F;
  margin:12px auto;
  padding-bottom:3px;
}

/* horizontal rule */
hr.FAM-hr {
  border:none;
  border-top:2px solid #DDD;
  margin:24px 0;
}

/* icon links */
.FAM-icon-link {
  font-size:18px;
  vertical-align:middle;
  display:inline-block;
  margin:0 6px;
}

/* list styles */
#FAM .FAM-list {
  margin:0;
  padding:0 0 0 40px;
  list-style-type:none;
}

#FAM .FAM-list li {
  margin:0;
  padding:3px 0;
  position:relative;
}

#FAM .FAM-list li:before {
  content:"";
  background:#39F;
  position:absolute;
  width:8px;
  height:8px;
  left:-16px;
  top:50%;
  margin-top:-4px;
  border-radius:100%;
}

#FAM .FAM-list li:hover:before { background:#06C; }

/* connected buttons */
#FAM .FAM-connected-buttons a {
  color:#333;
  background:#FFF;
  border:1px solid #DDD;
  display:inline-block;
  height:30px;
  line-height:28px;
  padding:0 12px;
  margin-left:-1px;
  text-decoration:none;
}

#FAM .FAM-connected-buttons a:hover {
  background:#EEE;
  border-color:#CCC;
  position:relative;
}

#FAM .FAM-connected-buttons a:active {
  background:#DDD;
  border-color:#BBB;
  position:relative;
}

#FAM .FAM-connected-buttons > a:first-child, #FAM .FAM-connected-buttons > span:first-child > a {
  border-radius:4px 0 0 4px;
  margin-left:0;
}

#FAM .FAM-connected-buttons > a:last-child, #FAM .FAM-connected-buttons > span:last-child > a {
  border-radius:0 4px 4px 0;
}

#FAM .FAM-connected-buttons i {
  font-size:20px;
  margin-right:3px;
  vertical-align:-2px;
}

/* labels / values */
.FAM-label {
  font-weight:bold;
  text-align:right;
  vertical-align:top;
  word-wrap:break-word;
  display:inline-block;
  width:30%;
  padding-right:6px;
  margin:0;
}

.FAM-label-value {
  display:inline-block;
  width:70%;
}

#FAM .FAM-label-value .FAM-inputbox:not([type="color"]) {
  width:60%;
}

/* init tab styles */
#FAM .FAM-label-value .FAM-init-tab.FAM-border-box .FAM-inputbox {
  width:90%;
  padding:8px;
}

.FAM-init-tab-controls .FAM-icon-link {
  font-size:24px;
}

/* symmetrical labels */
.FAM-symmetrical-label .FAM-label, .FAM-symmetrical-label .FAM-label-value {
  width:50%;
}

.FAM-symmetrical-label .FAM-label-value {
  text-align:left;
}

/* alignment, separation, and special classes */
.FAM-left { text-align:left; }
.FAM-right { text-align:right; }
.FAM-center { text-align:center; }

.FAM-float-left { float:left; }
.FAM-float-right { float:right; }
.FAM-clear { clear:both; }
.FAM-clear:after {
  content:"";
  display:table;
  clear:both;
}

.FAM-row, #FAM p { margin:12px 0; }
#FAM .FAM-center-block {
  width:50%;
  margin-left:auto;
  margin-right:auto;
}

.FAM-error {
  color:#F66;
  font-weight:bold;
}

/* pointer events */
.FAM-noclick { pointer-events:none; }
.FAM-clickable { pointer-events:all; }

/* separators for content */
.FAM-separator:after {
  content:" ";
  color:#CCC;
}
/* ... */

